--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "dev": "remix build && run-p \"dev:*\"",
     "start": "cross-env NODE_ENV=production npm run wrangler",
     "typecheck": "tsc -b",
-    "wrangler": "wrangler pages dev ./public"
+    "wrangler": "wrangler pages dev ./public",
+    "lint": "eslint \"./app/**/*.{ts,tsx,js,jsx}\"",
+    "lint:fix": "npm run lint -- --fix"
   },
   "dependencies": {
     "@remix-run/cloudflare": "^1.10.0",
@@ -24,12 +26,22 @@
     "@remix-run/eslint-config": "^1.10.0",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
-    "eslint": "^8.27.0",
+    "eslint": "8.31.0",
+    "eslint-config-prettier": "8.6.0",
+    "eslint-import-resolver-typescript": "3.5.3",
+    "eslint-plugin-import": "2.27.4",
+    "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-simple-import-sort": "8.0.0",
     "npm-run-all": "^4.1.5",
+    "prettier": "2.8.2",
+    "prettier-plugin-tailwindcss": "0.2.1",
     "typescript": "^4.8.4",
     "wrangler": "^2.2.1"
   },
   "engines": {
     "node": ">=16.13"
+  },
+  "prettier": {
+    "trailingComma": "all"
   }
 }
