--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "lint:fix": "npm run lint -- --fix"
   },
   "dependencies": {
+    "@notionhq/client": "2.2.3",
     "@remix-run/cloudflare": "^1.10.0",
     "@remix-run/cloudflare-pages": "^1.10.0",
     "@remix-run/react": "^1.10.0",
     "cross-env": "^7.0.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "zod": "3.20.2"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^3.18.0",
