--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "private": true,
   "sideEffects": false,
   "scripts": {
-    "build": "remix build",
+    "build:css": "tailwindcss -m -o ./app/tailwind.css",
+    "build": "npm run build:css && remix build",
+    "dev:css": "tailwindcss -w -o ./app/tailwind.css",
     "dev:remix": "remix watch",
     "dev:wrangler": "cross-env NODE_ENV=development npm run wrangler",
     "dev": "remix build && run-p \"dev:*\"",
@@ -14,31 +16,32 @@
   },
   "dependencies": {
     "@notionhq/client": "2.2.3",
-    "@remix-run/cloudflare": "^1.10.0",
-    "@remix-run/cloudflare-pages": "^1.10.0",
-    "@remix-run/react": "^1.10.0",
-    "cross-env": "^7.0.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@remix-run/cloudflare": "1.10.0",
+    "@remix-run/cloudflare-pages": "1.10.0",
+    "@remix-run/react": "1.10.0",
+    "cross-env": "7.0.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "zod": "3.20.2"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^3.18.0",
-    "@remix-run/dev": "^1.10.0",
-    "@remix-run/eslint-config": "^1.10.0",
-    "@types/react": "^18.0.25",
-    "@types/react-dom": "^18.0.8",
+    "@cloudflare/workers-types": "3.18.0",
+    "@remix-run/dev": "1.10.0",
+    "@remix-run/eslint-config": "1.10.0",
+    "@types/react": "18.0.26",
+    "@types/react-dom": "18.0.10",
     "eslint": "8.31.0",
     "eslint-config-prettier": "8.6.0",
     "eslint-import-resolver-typescript": "3.5.3",
     "eslint-plugin-import": "2.27.4",
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-simple-import-sort": "8.0.0",
-    "npm-run-all": "^4.1.5",
+    "npm-run-all": "4.1.5",
     "prettier": "2.8.2",
     "prettier-plugin-tailwindcss": "0.2.1",
-    "typescript": "^4.8.4",
-    "wrangler": "^2.2.1"
+    "tailwindcss": "3.2.4",
+    "typescript": "4.9.4",
+    "wrangler": "2.7.1"
   },
   "engines": {
     "node": ">=16.13"
