--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "remix build && run-p \"dev:*\"",
     "start": "cross-env NODE_ENV=production npm run wrangler",
     "typecheck": "tsc -b",
-    "wrangler": "wrangler pages dev ./public",
+    "wrangler": "wrangler pages dev ./public --kv KV",
     "lint": "eslint \"./app/**/*.{ts,tsx,js,jsx}\"",
     "lint:fix": "npm run lint -- --fix"
   },
@@ -19,6 +19,7 @@
     "@remix-run/cloudflare": "1.10.0",
     "@remix-run/cloudflare-pages": "1.10.0",
     "@remix-run/react": "1.10.0",
+    "cachified": "3.0.1",
     "cross-env": "7.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
