--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev:css": "tailwindcss -w -o ./app/tailwind.css",
     "dev:remix": "remix watch",
     "dev:wrangler": "cross-env NODE_ENV=development npm run wrangler",
-    "dev": "remix build && run-p \"dev:*\"",
+    "dev": "npm run build && run-p \"dev:*\"",
     "start": "cross-env NODE_ENV=production npm run wrangler",
     "typecheck": "tsc -b",
     "wrangler": "wrangler pages dev ./public --kv KV",
