--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "private": true,
   "sideEffects": false,
   "scripts": {
-    "build:css": "tailwindcss -m -o ./app/tailwind.css",
+    "build:css": "tailwindcss -m -o ./app/tailwind.css && postcss styles/**/*.css --dir app/styles --env production",
     "build": "npm run build:css && remix build",
-    "dev:css": "tailwindcss -w -o ./app/tailwind.css",
+    "dev:css": "tailwindcss -w -o ./app/tailwind.css && postcss styles/**/*.css --dir app/styles -w",
     "dev:remix": "remix watch",
     "dev:wrangler": "cross-env NODE_ENV=development npm run wrangler",
     "dev": "npm run build && run-p \"dev:*\"",
@@ -20,6 +20,8 @@
     "@remix-run/cloudflare-pages": "1.10.0",
     "@remix-run/react": "1.10.0",
     "cross-env": "7.0.3",
+    "postcss-cli": "^10.1.0",
+    "postcss-modules": "^6.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "zod": "3.20.2"
@@ -37,6 +39,7 @@
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-simple-import-sort": "8.0.0",
     "npm-run-all": "4.1.5",
+    "postcss": "^8.4.21",
     "prettier": "2.8.2",
     "prettier-plugin-tailwindcss": "0.2.1",
     "tailwindcss": "3.2.4",
