--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cross-env": "7.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "remix-image": "1.4.0",
     "zod": "3.20.2"
   },
   "devDependencies": {
@@ -41,7 +42,7 @@
     "prettier-plugin-tailwindcss": "0.2.1",
     "tailwindcss": "3.2.4",
     "typescript": "4.9.4",
-    "wrangler": "2.8.0"
+    "wrangler": "2.8.1"
   },
   "engines": {
     "node": ">=16.13"
