fix(renovate): use correct path to renovate config

--- a/renovate.json
+++ b/renovate.json
@@ -1,4 +1,4 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["local>capraconsulting/renovate-config"]
+  "extends": ["github>capralifecycle/aggressive-base"]
 }
