:zap: fix(renovate): use less aggressive renovate config

--- a/renovate.json
+++ b/renovate.json
@@ -1,4 +1,4 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["github>capralifecycle/renovate-config:aggressive-base"]
+  "extends": ["github>capralifecycle/renovate-config:default-base"]
 }
