chore: bump vm2 to ^3.9.19

--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "react-dom": "18.2.0",
     "zod": "3.22.4"
   },
+  "overrides": {
+    "vm2": "^3.9.19"
+  },
   "devDependencies": {
     "@cloudflare/workers-types": "3.19.0",
     "@remix-run/dev": "1.11.1",
