--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "cross-env": "7.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "zod": "3.22.4"
+    "zod": "3.22.4",
+    "remix-utils": "3.2.0",
+    "feather-icons-react": "0.7.1"
   },
   "overrides": {
     "vm2": "^3.9.19"
