--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react-dom": "18.2.0",
     "zod": "3.22.4",
     "remix-utils": "3.2.0",
-    "feather-icons-react": "0.7.1"
+    "phosphor-react": "1.4.1"
   },
   "overrides": {
     "vm2": "^3.9.19"
